--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react-dom": "latest",
     "react-scripts": "latest",
     "tsc": "^2.0.4",
-    "typescript": "latest"
+    "typescript": "latest",
+    "axios": "0.27.2"
   },
   "scripts": {
     "start": "react-scripts start",
