--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-scripts": "latest",
     "tsc": "^2.0.4",
     "typescript": "latest",
-    "axios": "0.27.2"
+    "axios": "0.27.2",
+    "http-proxy-middleware":"2.0.6"
   },
   "scripts": {
     "start": "react-scripts start",
